################################################################################
# Package 

[package]
authors = ['Unique Network <support@uniquenetwork.io>']
build = 'build.rs'
description = 'Substrate node nft'
edition = '2018'
homepage = 'https://unique.network'
license = 'All Rights Reserved'
name = 'nft-runtime'
repository = 'https://github.com/usetech-llc/nft_private/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-nft/runtime-benchmarks',
    'pallet-inflation/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
	'cumulus-pallet-aura-ext/std',
	'cumulus-pallet-parachain-system/std',
	'cumulus-pallet-xcm/std',
	'cumulus-pallet-xcmp-queue/std',
	'cumulus-primitives-core/std',
	'cumulus-primitives-utility/std',
    'evm-coder-substrate/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
	'pallet-aura/std',
    'pallet-balances/std',
    # 'pallet-contracts/std',
    # 'pallet-contracts-primitives/std',
    # 'pallet-contracts-rpc-runtime-api/std',
    # 'pallet-contract-helpers/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-treasury/std',
    'pallet-vesting/std',
    'pallet-evm/std',
    'pallet-ethereum/std',
    'fp-rpc/std',
	'parachain-info/std',
    'serde',
    'pallet-inflation/std',
    'pallet-nft/std',
    'pallet-scheduler/std',
    'pallet-nft-charge-transaction/std',
    'pallet-nft-transaction-payment/std', 
    'nft-data-structs/std',
    'sp-api/std',
    'sp-block-builder/std',
	"sp-consensus-aura/std",
    'sp-core/std',
    'sp-inherents/std',
	'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
	'xcm/std',
	'xcm-builder/std',
	'xcm-executor/std',
]

################################################################################
# Substrate Dependencies

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.serde]
default-features = false
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

# Contracts specific packages
# [dependencies.pallet-contracts]
# git = 'https://github.com/paritytech/substrate.git'
# default-features = false
# branch = 'polkadot-v0.9.8'
# version = '3.0.0'

# [dependencies.pallet-contracts-primitives]
# git = 'https://github.com/paritytech/substrate.git'
# default-features = false
# branch = 'polkadot-v0.9.8'
# version = '3.0.0'

# [dependencies.pallet-contracts-rpc-runtime-api]
# git = 'https://github.com/paritytech/substrate.git'
# default-features = false
# branch = 'polkadot-v0.9.8'
# version = '3.0.0'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.pallet-treasury]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.pallet-vesting]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '0.9.0'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.8'
version = '3.0.0'

[dependencies.smallvec]
version = '1.4.1'

################################################################################
# Cumulus dependencies

[dependencies.parachain-info]
default-features = false
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
version = '0.1.0'

[dependencies.cumulus-pallet-aura-ext]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
default-features = false

[dependencies.cumulus-pallet-parachain-system]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
default-features = false

[dependencies.cumulus-primitives-core]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
default-features = false

[dependencies.cumulus-pallet-xcm]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
default-features = false

[dependencies.cumulus-pallet-dmp-queue]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
default-features = false

[dependencies.cumulus-pallet-xcmp-queue]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
default-features = false

[dependencies.cumulus-primitives-utility]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
default-features = false

[dependencies.cumulus-primitives-timestamp]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'polkadot-v0.9.8'
default-features = false

################################################################################
# Polkadot dependencies

[dependencies.polkadot-parachain]
git = 'https://github.com/paritytech/polkadot'
branch = 'release-v0.9.8'
default-features = false

[dependencies.xcm]
git = 'https://github.com/paritytech/polkadot'
branch = 'release-v0.9.8'
default-features = false

[dependencies.xcm-builder]
git = 'https://github.com/paritytech/polkadot'
branch = 'release-v0.9.8'
default-features = false

[dependencies.xcm-executor]
git = 'https://github.com/paritytech/polkadot'
branch = 'release-v0.9.8'
default-features = false

[dependencies.pallet-xcm]
git = 'https://github.com/paritytech/polkadot'
branch = 'release-v0.9.8'
default-features = false



################################################################################
# local dependencies

[dependencies]
pallet-nft = { path = '../pallets/nft', default-features = false, version = '3.0.0' }
pallet-inflation = { path = '../pallets/inflation', default-features = false, version = '3.0.0' }
nft-data-structs = { path = '../primitives/nft', default-features = false,  version = '0.9.0' }
pallet-scheduler = { path = '../pallets/scheduler', default-features = false, version = '3.0.0' }
# pallet-contract-helpers = { path = '../pallets/contract-helpers', default-features = false, version = '0.1.0' }
pallet-nft-transaction-payment = { path = '../pallets/nft-transaction-payment', default-features = false, version = '3.0.0' }
pallet-nft-charge-transaction = { path = '../pallets/nft-charge-transaction', default-features = false, version = '3.0.0' }
evm-coder-substrate = { default-features = false, path = "../crates/evm-coder-substrate" }

pallet-evm = { default-features = false, version = "5.0.0-dev", git = "https://github.com/uniquenetwork/frontier.git", branch = "injected-transactions-parachain" }
pallet-ethereum = { default-features = false, version = "3.0.0-dev", git = "https://github.com/uniquenetwork/frontier.git", branch = "injected-transactions-parachain" }
fp-rpc = { default-features = false, version = "2.0.0", git = "https://github.com/uniquenetwork/frontier.git", branch = "injected-transactions-parachain" }

################################################################################
# Build Dependencies

[build-dependencies]
substrate-wasm-builder = '4.0.0'