[package]
edition = "2021"
license = "GPLv3"
name = "uc-rpc"
version = "0.1.4"

[dependencies]
anyhow = "1.0.57"
jsonrpsee = { version = "0.16.2", features = ["macros", "server"] }
trie-db = { version = "0.24.0", default-features = false }
zstd = { version = "0.11.2", default-features = false }

# Note: `package = "parity-scale-codec"` must be supplied since the `Encode` macro searches for it.
codec = { workspace = true, package = "parity-scale-codec" }

app-promotion-rpc = { workspace = true }
rmrk-rpc = { workspace = true }
up-common = { workspace = true }
up-data-structs = { workspace = true }
up-pov-estimate-rpc = { workspace = true, optional = true }
up-rpc = { workspace = true }

pallet-evm = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc-api = { default-features = false, workspace = true }
sc-service = { workspace = true }
sp-api = { default-features = false, workspace = true }
sp-blockchain = { default-features = false, workspace = true }
sp-core = { default-features = false, workspace = true }
sp-externalities = { workspace = true }
sp-keystore = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-state-machine = { workspace = true }
sp-trie = { default-features = false, workspace = true }

frame-benchmarking = { workspace = true }

sc-executor = { workspace = true }

opal-runtime = { workspace = true }
quartz-runtime = { workspace = true, optional = true }
unique-runtime = { workspace = true, optional = true }

[features]
pov-estimate = [
	'opal-runtime/pov-estimate',
	'quartz-runtime?/pov-estimate',
	'unique-runtime?/pov-estimate',
	'up-pov-estimate-rpc',
]
