[package]
edition = "2021"
license = "GPLv3"
name = "uc-rpc"
version = "0.1.4"

[dependencies]
jsonrpsee = { workspace = true }
parity-scale-codec = { workspace = true }
trie-db = { version = "0.27.1", default-features = false }
zstd = { version = "0.12.4", default-features = false }

app-promotion-rpc = { workspace = true }
up-common = { workspace = true }
up-data-structs = { workspace = true }
up-pov-estimate-rpc = { workspace = true, optional = true }
up-rpc = { workspace = true }

pallet-evm = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-externalities = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-trie = { workspace = true }

frame-benchmarking = { workspace = true }

sc-executor = { workspace = true }

opal-runtime = { workspace = true, optional = true }
quartz-runtime = { workspace = true, optional = true }
unique-runtime = { workspace = true, optional = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
all-runtimes = ['opal-runtime', 'quartz-runtime', 'unique-runtime']
default = ['opal-runtime']
pov-estimate = [
	'opal-runtime/pov-estimate',
	'quartz-runtime?/pov-estimate',
	'unique-runtime?/pov-estimate',
	'up-pov-estimate-rpc',
]
