[package]
edition = "2021"
license = "GPLv3"
name = "evm-coder"
version = "0.1.6"

[dependencies]
sha3-const = { version = "0.1.1", default-features = false }
# evm-coder reexports those proc-macro
evm-coder-procedural.path = "./procedural"
# Evm uses primitive-types for H160, H256 and others
primitive-types = { version = "0.12.1", default-features = false }
# Evm doesn't have reexports for log and others
ethereum = { version = "0.14.0", default-features = false }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
# Error types for execution
evm-core = { default-features = false, version = "0.37.0" }
# We have tuple-heavy code in solidity.rs
impl-trait-for-tuples = "0.2.2"

[dev-dependencies]
# We want to assert some large binary blobs equality in tests
hex = "0.4.3"
hex-literal = "0.3.4"
similar-asserts = "1.4.2"
trybuild = "1.0"

[features]
default = ["std"]
std = ["ethereum/std", "evm-core/std", "frame-support/std", "primitive-types/std"]
# Stub/interface generation
stubgen = []
