################################################################################
# Package

[package]
authors = ['Unique Network <support@uniquenetwork.io>']
build = 'build.rs'
description = 'Unique Node'
edition = '2021'
homepage = 'https://unique.network'
license = 'GPLv3'
name = 'unique-node'
repository = 'https://github.com/UniqueNetwork/unique-chain'
version.workspace = true

[[bin]]
name = 'unique-collator'
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
clap = "4.4"
futures = '0.3.28'
serde_json = "1.0"
tokio = { version = "1.32", features = ["time"] }

log = { workspace = true }

parity-scale-codec = { workspace = true }

cumulus-client-cli = { workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-aura = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { features = ["std"], workspace = true }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
opal-runtime = { workspace = true, optional = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
quartz-runtime = { workspace = true, optional = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
serde = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
try-runtime-cli = { workspace = true }
unique-runtime = { workspace = true, optional = true }
up-common = { workspace = true }
up-data-structs = { workspace = true }

fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc-core = { workspace = true }
fc-rpc.workspace = true
fp-rpc = { workspace = true }

app-promotion-rpc = { workspace = true }
fc-api.workspace = true
fp-storage.workspace = true
jsonrpsee.workspace = true
pallet-transaction-payment-rpc.workspace = true
sc-rpc-api.workspace = true
sc-rpc.workspace = true
sp-inherents.workspace = true
uc-rpc = { workspace = true }
up-pov-estimate-rpc = { workspace = true }
up-rpc = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
all-runtimes = ['opal-runtime', 'quartz-runtime', 'unique-runtime']
default = ["opal-runtime"]
gov-test-timings = [
	'opal-runtime/gov-test-timings',
	'quartz-runtime?/gov-test-timings',
	'unique-runtime?/gov-test-timings',
]
lookahead = ['opal-runtime/lookahead']
pov-estimate = [
	'opal-runtime/pov-estimate',
	'quartz-runtime?/pov-estimate',
	'uc-rpc/pov-estimate',
	'unique-runtime?/pov-estimate',
]
runtime-benchmarks = [
	'opal-runtime/runtime-benchmarks',
	'polkadot-cli/runtime-benchmarks',
	'polkadot-service/runtime-benchmarks',
	'quartz-runtime?/runtime-benchmarks',
	'sc-service/runtime-benchmarks',
	'unique-runtime?/runtime-benchmarks',
]
sapphire-runtime = ['quartz-runtime', 'quartz-runtime/become-sapphire']
session-test-timings = [
	'opal-runtime/session-test-timings',
	'quartz-runtime?/session-test-timings',
	'unique-runtime?/session-test-timings',
]
try-runtime = [
	'opal-runtime?/try-runtime',
	'quartz-runtime?/try-runtime',
	'try-runtime-cli/try-runtime',
	'unique-runtime?/try-runtime',
]
